change pantry to cabinet, add delete route, add CRUD

--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -13,7 +13,7 @@
 <body>
   <%- include('../partials/_navbar.ejs') %>
     <h1>
-      <%= user.username %>'s Pantry
+      <%= user.username %>'s Cabinet
     </h1>
     <ul class="user-list">
       <% user.pantry.forEach((item)=> { %>
