--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -10,15 +10,12 @@
   <form action="/auth/sign-up" method="POST">
     <label for="username">Username:</label>
     <input type="text" name="username" id="username" required />
+
     <label for="password">Password:</label>
     <input type="password" name="password" id="password" required />
+
     <label for="confirmPassword">Confirm Password:</label>
-    <input 
-      type="password"
-      name="confirmPassword"
-      id="confirmPassword"
-      required 
-    />
+    <input type="password" name="confirmPassword" id="confirmPassword" required /> 
     <button type="submit">Sign up</button>
   </form>
 </body>
