--- a/views/plants/new.ejs
+++ b/views/plants/new.ejs
@@ -14,8 +14,8 @@
   <%- include('../partials/_navbar') %>
 
     <div class="container" id="bottomMargin">
-      <h1 class="center-align">Add a New Book</h1>
-      <form action="/books" method="POST" class="col s12">
+      <h1 class="center-align">Add a New Plant</h1>
+      <form action="/plants" method="POST" class="col s12">
         <div class="row">
           <div class="input-field col s12">
             <input type="text" name="title" id="title" required>
@@ -30,7 +30,7 @@
         </div>
         <div class="row center-align">
           <button class="btn wave-affect waves-ligth teal">Submit</button>
-          <a href="/books" class="btn waves-effect waves-light orange">Back</a>
+          <a href="/plants" class="btn waves-effect waves-light orange">Back</a>
         </div>
       </form>
     </div>
