css/views style changes

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,5 +1,7 @@
 <nav>
-  <div class="nav-wrapper blue darken-1">
-      <a href="/" class="brand-logo center">Plants🪴</a>
+  <div class="nav-wrapper green darken-2">
+    <a href="/" class="brand-logo center">
+      <img src="/images/logo.png" alt="Plant logo" style="height: 40px; vertical-align: middle;"> Propagation Station
+    </a>
   </div>
 </nav>
