--- a/views/plants/index.ejs
+++ b/views/plants/index.ejs
@@ -22,7 +22,7 @@
         <li class="collection-item">
           <a href="/plants/<%= plant._id %>">
             <strong>
-              <%= plant.title %>
+              <%= plant.name %>
             </strong> by <%= plant.author %>
           </a>
           <div class="plant-container">
