--- a/views/auth/sign-in.ejs
+++ b/views/auth/sign-in.ejs
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <div class="form-container">
-      <h4>Sign in</h4>
+      <h4>Welcome back to Propagation Station! 🌱</h4>
       <form action="/auth/sign-in" method="POST">
         <div class="input-field">
           <label for="username">Username:</label>
