--- a/views/plants/new.ejs
+++ b/views/plants/new.ejs
@@ -11,15 +11,15 @@
 </head>
 
 <body>
-  <%- include('../partials/_navbar') %>
+  <%- include('../partials/nav') %>
 
     <div class="container" id="bottomMargin">
       <h1 class="center-align">Add a New Plant</h1>
       <form action="/plants" method="POST" class="col s12">
         <div class="row">
           <div class="input-field col s12">
-            <input type="text" name="title" id="title" required>
-            <label for="title">Title</label>
+            <input type="text" name="name" id="name" required>
+            <label for="name">Name</label>
           </div>
         </div>
         <div class="row">
