--- a/views/plants/show.ejs
+++ b/views/plants/show.ejs
@@ -17,12 +17,12 @@
         <div class="card-content">
           <header>
             <h1 class="center-align">
-              <%= plant.title %>
+              <%= plant.name %>
             </h1>
           </header>
           <div class="container row">
             <div class="col s3">
-              <img class="responsive-image" src="<%= plant.coverImage %>" alt="<%= plant.title %>"
+              <img class="responsive-image" src="<%= plant.coverImage %>" alt="<%= plant.name %>"
                 style="max-height: 200px;">
             </div>
             <div class="left-align col s9">
