--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,7 +1,7 @@
 <nav>
   <div class="nav-wrapper green darken-2">
     <a href="/" class="brand-logo center">
-      <img src="/images/logo.png" alt="Plant logo" style="height: 40px; vertical-align: middle;"> Propagation Station
+      <img src="https://i.pinimg.com/736x/db/84/78/db8478c2cfe8b2316d241049e4a4074b.jpg" alt="Plant logo" style="height: 40px; vertical-align: middle;"> Propagation Station
     </a>
   </div>
 </nav>
