--- a/views/plants/index.ejs
+++ b/views/plants/index.ejs
@@ -2,12 +2,13 @@
 <html>
 
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>
+    <%= title %>
+  </title>
   <%- include('../partials/head') %>
-    <title>
-      <%= title %>
-    </title>
 </head>
-
 
 <body>
   <nav>
