--- a/views/auth/sign-in.ejs
+++ b/views/auth/sign-in.ejs
@@ -24,8 +24,8 @@
         <button type="submit" class="btn teal waves-effect waves-light">Sign in</button>
         <br>
         <br>
-        <p>if you don't have an account: </p>
-        <a href="/auth/sign-up" class="btn waves-effect waves-light pink">Sign Up</a>
+        <p>Join the Green Community! 🌿 </p>
+        <a href="/auth/sign-up" class="btn waves-effect teal darken-4">Sign Up</a>
       </form>
     </div>
   </div>
