--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <%- include('../partials/head') %>
-    <title>Plants 🪴</title>
+    <title>🪴 Plants 🪴</title>
 </head>
 
 <body>
@@ -21,7 +21,6 @@
         <a href="/plants" class="btn">Go to Plants Page</a>
       </div>
       <div class="center-align" style="margin-top: 40px;">
-        <!-- new sign out link -->
         <a href="/auth/sign-out" class="btn teal center-align">Sign out</a>
       </div>
     </div>
