--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <%- include ('../partials/head') %>
   <title>Sign Up</title>
 </head>
+
 <body>
   <h1>Join the Green Community! 🌿</h1>
   <form action="/auth/sign-up" method="POST">
