--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,17 +1,36 @@
 body {
   background: linear-gradient(to bottom, #a5d6a7, #005003); /* Green gradient */
   font-family: 'Roboto', sans-serif;
-  padding-top: 30px;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: #005003;
+  
+}
+
+head {
+  background: linear-gradient(to bottom, #a5d6a7, #005003); /* Green gradient */
+  font-family: 'Roboto', sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: #005003;  
 }
 
 .container {
   max-width: 600px;
-  margin: auto;
+  margin: 50 50 50 50;
+  padding: 20px;
 }
 
 .form-container {
   background: #000000;
-  padding: 30px;
+  padding: 30 30 30 30;
   border-radius: 10px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
 }
@@ -38,7 +57,7 @@ input {
 button {
   background-color: #43a047;
   color: rgb(0, 0, 0);
-  border: none;
+  border: rounded;
   padding: 12px;
   border-radius: 5px;
   cursor: pointer;
@@ -82,18 +101,14 @@ a.btn {
 }
 
 nav {
-  background: linear-gradient(to right, #4caf50, #2e7d32); 
+  background: linear-gradient(to bottom, #a5d6a7, #005003); 
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
   position: sticky;
   top: 0;
   z-index: 1000;
+  margin-top: 400px;
 }
 
-/* nav {
-  position: sticky;
-  top: 0;
-  z-index: 1000;
-} */
 
 .nav-wrapper .brand-logo {
   font-family: 'Roboto', sans-serif;
