--- a/views/auth/sign-in page -->sign-up.ejs
+++ b/views/auth/sign-in page -->sign-up.ejs
@@ -1,3 +1,4 @@
+<!-- views/auth/sign-in page -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,6 +10,9 @@
 </head>
 
 <body>
+  <%- include('../partials/nav') %>
+  <div class="container">
+    <h1>Sign Up</
   <h1>Join the Green Community! 🌿</h1>
   <form action="/auth/sign-up" method="POST">
     <label for="username">Username:</label>
@@ -20,6 +24,8 @@
     <label for="confirmPassword">Confirm Password:</label>
     <input type="password" name="confirmPassword" id="confirmPassword" required /> 
     <button type="submit">Sign up</button>
+
   </form>
+  </div>
 </body>
 </html>
