--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,3 +1,5 @@
+<!--views/partials/head.ejs-->
+
 <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css?family=Baloo&display=swap" rel="stylesheet">
 <!-- Materialize Icons -->
